<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuView"
    android:background="#9999ff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vineet.easybuy.Menu">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/welcome_to_easy_buy"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/iv1"
        android:layout_width="86dp"
        android:layout_height="85dp"
        android:layout_marginStart="8dp"

        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1"
        app:srcCompat="@drawable/easybuy" />

    <ImageView
        android:id="@+id/iv2"
        android:layout_width="92dp"
        android:layout_height="91dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:onClick="delivery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv1"
        app:srcCompat="@drawable/delivery" />

    <ImageView
        android:id="@+id/iv3"
        android:layout_width="100dp"
        android:layout_height="147dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:onClick="shopping"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv2"
        app:srcCompat="@drawable/shopping" />

    <ImageView
        android:id="@+id/iv4"
        android:layout_width="98dp"
        android:layout_height="129dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:onClick="banking"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv3"
        app:srcCompat="@drawable/emiloan" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:text="@string/instant_delivery_anytime_anything"
        android:textStyle="italic"
        android:gravity="center"
        android:background="#FBBE95"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toEndOf="@+id/iv2"
        app:layout_constraintTop_toTopOf="@+id/iv2" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:text="@string/one_stop_thrift_shop_on_emi"
        android:textStyle="italic"
        android:background="#FBBE95"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toEndOf="@+id/iv3"
        app:layout_constraintTop_toTopOf="@+id/iv3" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:text="@string/personal_monetizer"
        android:background="#FBBE95"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/iv4"
        app:layout_constraintTop_toTopOf="@+id/iv4" />

</android.support.constraint.ConstraintLayout>
