<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/deliveryView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.vineet.easybuy.Delivery"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:background="#ffccff"
        >


    <TextView
        android:id="@+id/deliverymodule"
        android:layout_width="match_parent"
        android:gravity="center"
        android:background ="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:text="DELIVERY MODULE"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
         />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deliverymodule"
        app:srcCompat="@drawable/sendpackage" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffcc00"
        android:text="@string/send_package"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="italic" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ff6600"
            android:text="@string/enter_pick_up_location"
            android:textColor="#000"
            android:textSize="15sp"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/et1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="eg: Yelahanka"
            android:layout_below="@+id/tv2"
            android:inputType="textPersonName"
            />

        <TextView
            android:id="@+id/tV3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ff6600"
            android:text="@string/enter_drop_location"
            android:textColor="#000"
            android:textSize="15sp"
            android:textStyle="italic"
            android:layout_below="@+id/et1"
            />

        <EditText
            android:id="@+id/et2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="eg: Vidyaranyapura"
            android:inputType="textPersonName"
            android:layout_below="@+id/tV3"
            />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ff6600"
            android:text="@string/enter_the_package_contents"
            android:textColor="#000"
            android:textSize="15sp"
            android:textStyle="italic"
            android:layout_below="@+id/et2"
            />

        <EditText
            android:id="@+id/et3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="eg: food,charger,shoes etc"
            android:inputType="textPersonName"
            android:layout_below="@+id/tv3"
            />




        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estimated_value_of_content"
            android:textColor="#000"
            android:textStyle="italic"
            android:background="#ff6600"
            android:layout_below="@+id/et3"
            />

        <EditText
            android:id="@+id/et4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="eg: 2,000"
            android:inputType="textPersonName"
            android:layout_below="@+id/tv4"
            />

        <TextView
            android:id="@+id/tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Any extra Instructions to delivery boy?"
            android:textColor="#000"
            android:layout_below="@+id/et4"
            />

        <EditText
            android:id="@+id/et5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="eg: Glass item, handle with utmost care"
            android:inputType="textPersonName"
            android:layout_below="@+id/tv5"
            />


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            android:id="@+id/card1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="1dp"
            app:cardCornerRadius="1dp"
            android:layout_below="@+id/et1"
            app:cardElevation="6dp">

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recyclerView1"
                >

            </android.support.v7.widget.RecyclerView>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            android:id="@+id/card2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="1dp"
            app:cardCornerRadius="1dp"
            android:layout_below="@+id/et2"
            app:cardElevation="6dp">

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recyclerView2"
                >

            </android.support.v7.widget.RecyclerView>

        </android.support.v7.widget.CardView>

    </RelativeLayout>


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="144dp"
        android:layout_height="44dp"
        android:onClick="deliverybooking"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/deliverybutton" />

    <TextView
        android:id="@+id/tv6"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#000000"
        android:gravity="center"
        android:text="PROCEED"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        />
    </LinearLayout>
</ScrollView>

